# lena-rag

./: .env.example  .gitignore  README.md  main.py  plain_rag.py  pyproject.toml
eval/: dataset.py
scripts/: lena  lena-api
src/: api.py  chain.py  config.py  graph.py  ingestion.py  main.py  prompts.py  rag.py  vectorstore.py
