[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lena-pj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "numpy>=2.5.1",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "uvicorn>=0.50.2",
]

[tool.setuptools]
script-files = ["scripts/lena", "scripts/lena-api"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
